--- a/EX4.html
+++ b/EX4.html
@@ -1,12 +1,22 @@
 <html>
 	<head>
-		<title>Ejemplo de estilos CSS en el propio documento</title>
+		<title>TÍTULO DE EJEMPLO (mayúsculas)</title>
 		<link href="EX1.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1> Titulo </h1>
-		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
-		<p> Esto <b>prueba</b> las <i>etiquetas</i> de <u>formato </u> html </p>
+		<h1>
+			<i>Encabezado 1</i>
+		</h1>
+		<p>
+			Texto dentro del <b>encabezado 1</b>
+		</p>
+		<h2>Encabezado 2</h2>
+		<p>Lista de categorías: series, películas (acción;comedia)...</p>
+		<p>
+			<u>URL</u> de prueba: http://www.prueba26.com
+		</p>
+		<h2>
+			<u>Otro encabezado 2</u>
+		</h2>
 	</body>
 </html>
