--- a/EX4.html
+++ b/EX4.html
@@ -7,7 +7,11 @@
 		<a href="https://as.com/">Diario As</a>
 		<h1> Titulo <a href="https://www.marca.com/" >Este es el enlace del marca</a> </h1>
 		<h2> Ejemplo 1 </h2>
-		<p>Un parrafo de texto.</p>
+		<a href="https://as.com/futbol">Otro enlace del Diario As</a>
+		<p>Un parrafo de texto, que contiene 2 enlaces: 
+			<a href="https://www.marca.com/tenis" >Este es el enlace del marca en tenis</a>
+			<a href="https://www.marca.com/baloncesto" >Este es el enlace del marca en baloncesto</a>
+		</p>
 		<p> Esto <b>prueba</b> las  <i>etiquetas</i> de <u>formato</u> html </p>
 	</body>
 </html>
